complete foundation setup with TS, Express and Docker
- Add TS + Express server
- Configure PostgreSQL with Prisma ORM and Docker Compose
- Implement security middleware (Helmet, CORS
- Add simple logging with Pino and environment validation
- Set up Docker containerisation with Node.js 20 LTS
- Create health endpoints
- Configure hot reload development and graceful shutdown
- Add port conflict resolution

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production builds
+# Build outputs
 dist/
 build/
-out/
 
 # Environment variables
 .env
@@ -16,28 +15,16 @@ out/
 .env.test.local
 .env.production.local
 
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Database
+*.db
+*.sqlite
 
 # Logs
-logs
+logs/
 *.log
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
@@ -45,6 +32,12 @@ pids
 # Coverage directory used by tools like istanbul
 coverage/
 
-# Temporary folders
-tmp/
-temp/
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
