--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - .:/app
       - /app/node_modules
     command: npm run dev:container
+    stop_grace_period: 2s
+    init: true
 
 volumes:
   postgres_data:
