update test script to ensure .env file exists before running tests

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev:docker": "npm run clean && docker-compose up --build",
     "start:docker": "npm run clean && docker-compose up --build",
     "build": "tsc",
-    "test": "docker-compose up -d postgres && sleep 5 && npx prisma db push --skip-generate && jest",
+    "test": "(test -f .env || cp env.example .env) && docker-compose up -d postgres && sleep 5 && npx prisma db push --skip-generate && jest",
     "test:watch": "jest --watch",
     "clean": "lsof -ti:3000 | xargs kill -9 || true && docker-compose down || true",
     "docker:up": "docker-compose up -d",
