--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,11 @@ services:
     container_name: fund-management-api
     ports:
       - '3000:3000'
+    env_file:
+      - .env
     environment:
-      - NODE_ENV=development
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/fund_management?schema=public
+      - NODE_ENV=development
     depends_on:
       postgres:
         condition: service_healthy
